Updated FR resources

--- a/layouts/_partials/custom/head-end.html
+++ b/layouts/_partials/custom/head-end.html
@@ -1,2 +1,2 @@
 {{/*  Plausible analytics code  */}}
-<script defer data-domain="voteyesyukon.ca" src="https://plausible.io/js/script.js"></script>
+<script defer data-domain="votezouiyukon.ca" src="https://plausible.io/js/script.js"></script>
