--- a/layouts/_partials/custom/footer.html
+++ b/layouts/_partials/custom/footer.html
@@ -1,15 +1,15 @@
 <div class="hx:text-xs hx:my-2" style="text-align: right;">
   <p class="">
-    Get in touch! Email us at 
+    Contactez-nous! Envoyez un courriel à 
     <a href="mailto:voteyesyukon@gmail.com">voteyesyukon@gmail.com</a>.
   </p>
   <p class="hx:mt-1">
-    Not affiliated with any Yukon political party or other organization.
+    Pas affilié avec des partis politiques ou autres organisations Yukonnais.
   </p>
   <p class="hx:mt-1 hx:mb-3">
-    © 2025. Licensed under a
-    <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank"
-      >Creative Commons license</a
+    © 2025. Partagé sous un 
+    <a href="https://creativecommons.org/licenses/by/4.0/deed.fr" target="_blank"
+      >licence Creative Commons</a
     >.
   </p>
 </div>
