Updated footer links

--- a/layouts/_partials/custom/footer.html
+++ b/layouts/_partials/custom/footer.html
@@ -12,4 +12,7 @@
       >licence Creative Commons</a
     >.
   </p>
+  <p class="hx:mt-1 hx:mb-3">
+    <a href="https://voteyesyukon.ca/">English</a> · <a href="https://www.facebook.com/people/Vote-Yes-Yukon-Votez-oui-Yukon/61581300344433/">Retrouvez-nous sur Facebook</a> · <a href="https://github.com/sboots/vote-yes-yukon-website-2025">Voir ce site sur GitHub</a>
+  </p>
 </div>
